<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:background="@color/white"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
  <include layout="@layout/include_head_title"></include>
    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:background="@color/mian_color"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/white"
                    android:text="@string/pay_countdown"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textSize="@dimen/sp_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <cn.iwgang.countdownview.CountdownView
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:id="@+id/countdownView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:isHideTimeBackground="true"
                    app:isShowDay="false"
                    app:isShowHour="true"
                    app:isShowMillisecond="false"
                    app:isShowMinute="true"
                    app:isShowSecond="true"
                    app:isTimeTextBold="true"
                    app:suffixDay="天"
                    app:suffixGravity="bottom"
                    app:suffixHour=":"
                    app:suffixMinute=":"
                    app:suffixTextColor="@color/white"
                    app:suffixTextSize="12sp"
                    app:timeTextColor="@color/white"
                    app:timeTextSize="25sp"
                    />
                <TextView
                    android:layout_marginBottom="@dimen/dp_15"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:text="请在15分钟内完成支付,否则订单自动关闭"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textSize="@dimen/sp_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <ImageView
                android:scaleType="fitXY"
                android:background="@mipmap/img_language_yzy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_5"/>


    <LinearLayout
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_150">
        <LinearLayout
            android:paddingRight="@dimen/dp_15"
            android:paddingLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/c3"
            android:text="@string/pay_price"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textSize="@dimen/sp_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txt_pay_price"
            android:textColor="#e43535"
            android:text="￥125.00"
            android:textStyle="bold"
            android:textSize="@dimen/sp_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:layout_marginTop="@dimen/dp_30"
            android:paddingLeft="@dimen/dp_15"
            android:background="@color/fafafa"
            android:textSize="@dimen/sp_16"
            android:gravity="center|left"
            android:text="@string/pay_select"
            android:textColor="@color/c3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_49"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/liner_alipay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            android:background="@mipmap/img_icon_cz_unchecked_zfb_yzy"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/zfb"
            android:textColor="@color/c3"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <CheckBox
            android:checked="true"
            android:id="@+id/alipay"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:background="@drawable/checkbox_bg"
            android:button="@null"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/liner_wxpay"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:padding="15dp"
        android:background="@color/white"
        android:layout_height="wrap_content">
        <ImageView
            android:background="@mipmap/icon_share_wx_unchecked_yzy"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_marginRight="15dp"
            android:layout_height="40dp" />
        <TextView
            android:text="@string/wxpay"
            android:textColor="@color/c3"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <CheckBox
            android:background="@drawable/checkbox_bg"
            android:layout_marginLeft="15dp"
            android:button="@null"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/wxpay"
            android:layout_width="15dp"
            android:layout_height="15dp"
            />
    </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/txt_go"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/fc4f4f"
        android:gravity="center"
        android:text="@string/okpay"
        android:textColor="@color/white" />
</LinearLayout>