<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/white"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/include_head_title"></include>
    <LinearLayout
        android:layout_weight="1"
        android:layout_marginRight="@dimen/dp_60"
        android:layout_marginLeft="@dimen/dp_60"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_marginTop="@dimen/dp_50"
            android:id="@+id/login_image"
            android:layout_width="@dimen/dp_160"
            android:layout_height="@dimen/dp_160"
            android:layout_gravity="center"
            android:src="@mipmap/img_hi_yzy" />
        <LinearLayout
            android:id="@+id/liner_countrycode"
            android:layout_marginTop="@dimen/dp_27"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40">
            <TextView
                android:id="@+id/txt_countrycode"
                android:layout_gravity="center"
                android:text="中国+86"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/c6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginLeft="@dimen/dp_22"
                android:layout_gravity="center"
                android:src="@mipmap/icon_back_right_black_yzy"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/liner_user"

            android:background="@drawable/edit_backshape"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginLeft="@dimen/dp_22"
                android:layout_gravity="center"
                android:src="@mipmap/icon_home_me_a_selected_yzy"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"/>
            <EditText
                android:layout_weight="1"
                android:id="@+id/edit_name"
                android:layout_marginRight="@dimen/dp_22"
                android:layout_gravity="center"
                android:text=""
                android:textColorHint="@color/black"
                android:hint="@string/please_phone_mail"
                android:textSize="@dimen/sp_14"
                android:background="@null"
                android:textColor="@color/txtcolor"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_40"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/liner_code"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@drawable/edit_backshape"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_22"
                android:layout_marginRight="@dimen/dp_15"
                android:src="@mipmap/icon_log_lock_yzy"/>
            <EditText
                android:layout_weight="1"
                android:id="@+id/edit_code"
                android:layout_marginRight="@dimen/dp_22"
                android:layout_gravity="center"
                android:text=""
                android:textColorHint="@color/black"
                android:hint="@string/pleasecode"
                android:textSize="@dimen/sp_14"
                android:background="@null"
                android:textColor="@color/txtcolor"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_40"/>

            <TextView
                android:id="@+id/txt_code"
                android:background="@drawable/code_backround"
                android:textColor="@color/white"
                android:text="获取验证码"
                android:textColorHint="@color/black"
                android:gravity="center"
                android:textSize="@dimen/sp_12"
                android:layout_gravity="center"
                android:layout_width="@dimen/dp_70"
                android:layout_height="match_parent"/>


        </LinearLayout>
        <LinearLayout
               android:visibility="gone"
            android:id="@+id/line_password"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@drawable/edit_backshape"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginLeft="@dimen/dp_22"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_gravity="center"
                android:src="@mipmap/icon_log_lock_yzy"
                android:layout_width="@dimen/dp_23"
                android:layout_height="@dimen/dp_17"/>
            <EditText
                android:layout_weight="1"
                android:id="@+id/edit_pass"
                android:layout_marginRight="@dimen/dp_22"
                android:layout_gravity="center"
                android:text=""
                android:inputType="textPassword"
                android:textColorHint="@color/black"
                android:hint="@string/pleasepass"
                android:textSize="@dimen/sp_14"
                android:background="@null"
                android:textColor="@color/txtcolor"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_40"/>
            <!--  <ImageView
                  android:id="@+id/select_pass"
                  android:layout_marginRight="@dimen/dp_15"
                  android:layout_marginLeft="@dimen/dp_22"
                  android:layout_gravity="center"
                  android:src="@mipmap/ic_launcher"
                  android:layout_width="@dimen/dp_20"
                  android:layout_height="@dimen/dp_20"/>-->

        </LinearLayout>
        <TextView
            android:id="@+id/txt_noid"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_gravity="center"
            android:text="@string/Understandingandcoordination"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/f3ac7c9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txt_newwork_law"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_gravity="center"
            android:text="@string/Networksecuritylaw"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/c6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:background="@color/ffc244"
        android:id="@+id/login_btn"
        android:text="@string/bind"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44" />
</LinearLayout>